[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Settings.gd" type="Script" id=1]
[ext_resource path="res://Assets/Misc/main_menu_screen.png" type="Texture" id=2]

[node name="settingsMenu" type="Control" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Pause" ]

[node name="CenterContainer" type="CenterContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="TextureRect" type="TextureRect" parent="CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 320.0
margin_bottom = 180.0
rect_min_size = Vector2( 320, 180 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 127.0
margin_top = 100.0
margin_right = 210.0
margin_bottom = 168.0
rect_scale = Vector2( 0.8, 0.8 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="musicButton" type="Button" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 83.0
margin_bottom = 20.0
rect_min_size = Vector2( 83, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "MUSIC ON"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="creditsButton" type="Button" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 83.0
margin_bottom = 44.0
rect_min_size = Vector2( 83, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "CREDITS"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="backButton" type="Button" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 48.0
margin_right = 83.0
margin_bottom = 68.0
rect_min_size = Vector2( 83, 20 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "BACK"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[connection signal="pressed" from="VBoxContainer/musicButton" to="." method="_on_musicButton_pressed"]

[connection signal="pressed" from="VBoxContainer/creditsButton" to="." method="_on_creditsButton_pressed"]

[connection signal="pressed" from="VBoxContainer/backButton" to="." method="_on_backButton_pressed"]


